assets/css/style.css
body {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    line-height: 1;
  }
  
  input{
    background: transparent;
    border: none;
    resize: none;
    color: #000000;
    border-left: 1px solid black;
    padding: 10px;
    width:100%;
    height:100%;
  }
  
  .jumbotron {
    text-align: center;
    background-color: transparent;
    color: black;
    border-radius: 0;
    border-bottom: 10px solid black;
  }
  
  .description{
    white-space: pre-wrap;
  }
  
  .time-block{
    text-align: center;
    border-radius: 15px;
  }
  
  .row {
    white-space: pre-wrap;
    height: 80px;
    border-top: 1px solid white;;
  }
  
  .hour {
    background-color: #ffffff;
    color: #000000;
    border-top: 1px dashed #000000;
    text-align: center;
    width: 100%;
  }
  
  .past {
    background-color: #d3d3d3;
    color: white;
  }
  
  .present {
    background-color: #ff6961;
    color: white;
  }
  
  .future {
    background-color: #77dd77;
    color: white;
  }
  
  .saveButton {
    border-left: 1px solid black;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    background-color: #06AED5;
    color: white;
    text-align: center;
    height: 100%;
    width: 100%;
  }
  
  .saveButton i:hover {
    font-size: 20px;
    transition: all .3s ease-in-out;
  }

  /* .saveBtn {
    border-left: 1px solid black;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    text-align: center;
    height: 100%;
    width: 100%;
  } */


  
  /* button {
      background-color: #4CAF50; 
      border: none;
      color: white;
      padding: 15px 32px;
      text-align: center;
      text-decoration: none;
      display: inline-block;
      font-size: 16px;
    } */

